derive_validify_tests/tests/compile_fail/nested_no_modify.stderr
error[E0599]: no method named `modify` found for struct `Nest` in the current scope
  --> tests/compile_fail/nested_no_modify.rs:3:10
   |
3  | #[derive(Validify)]
   |          ^^^^^^^^ method not found in `Nest`
...
11 | struct Nest {
   | ----------- method `modify` not found for this
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `modify`, perhaps you need to implement it:
           candidate #1: `Modify`
   = note: this error originates in the derive macro `Validify` (in Nightly builds, run with -Z macro-backtrace for more info)
